--- a/style/demoPage.css
+++ b/style/demoPage.css
@@ -23,7 +23,7 @@
 }
 
 .rightSide > input, p, select  {
-  margin: 0 4px;
+  margin-right: 8px;
 }
 
 .engineConfiguration>select{
@@ -105,11 +105,12 @@ div#primary{
 }
 
 .runType {
-  margin: 0 8px;
+  margin-right: 8px;
 }
 
 .floater {
   font-size: 16px;
+  margin-right: 8px;
 }
 
 .container {
