--- a/style/demoPage.css
+++ b/style/demoPage.css
@@ -19,11 +19,16 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  margin: 4px;
 }
 
-.rightSide > input, p, select  {
+.engineConfiguration input,
+.engineConfiguration p,
+.engineConfiguration select  {
   margin-right: 8px;
+}
+
+.dataPointContainer p {
+  margin-right: 4px;
 }
 
 .engineConfiguration>select{
@@ -81,7 +86,7 @@ div#primary{
 }
 
 .container-fluid {
-  /* padding-right:0; */
+  padding-right:0;
   padding-left:0;
   margin-right:auto;
   margin-left:auto;
