--- a/style/device.css
+++ b/style/device.css
@@ -15,7 +15,17 @@
   margin-top: 95px;
 }
 
-.mobile video, .mobile #AVplayer0, .mobile .loaded, .mobile #av-container, .mobile .avp-p-gui, .mobile #avntsPlayer0Container, .mobile #avantisContainer0 {
+.leftSide, .rightSide {
+  margin-bottom: 4px;
+}
+
+.mobile video,
+.mobile #AVplayer0,
+.mobile .loaded,
+.mobile #av-container,
+.mobile .avp-p-gui,
+.mobile #avntsPlayer0Container,
+.mobile #avantisContainer0 {
   width: 338px!important;
   height: 190px!important;
 }
