--- a/style/device.css
+++ b/style/device.css
@@ -1,8 +1,13 @@
+.mobile {
+  background-color: #f2f2f2;
+}
 
-.mobile, .mobile #engineConfiguration {
+.mobile .page-body {
   max-width: 375px;
-  margin: 0 auto;
+  margin: 62px auto 0;
   padding-bottom: 10px;
+  background-color: #ffffff;
+  box-shadow: 0 0 10px 0 rgb(0 0 0 / 20%);
 }
 .mobile .col-md-3 {
   width: 0;
